# honestroles

./: .cursorrules  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING_PLUGIN.md  README.md  framework.md  ingest_quality.toml  ingest_quality_smoke.toml  mkdocs.yml  objects.md  pyproject.toml  recommend_eval.toml  recommendation.toml  requirements.txt  source_schema.md
.github/: LABELS.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: plugin_submission.yml
.github/workflows/: ci.yml  docs-check.yml  docs-pages.yml  fuzz.yml  ingest-smoke.yml  neondb-smoke.yml  release.yml
contracts/: agent_request.v1.json  agent_response.v1.json
docs/: 404.md  clean.md  deprecation.md  docs_stack.md  filter.md  framework.md  index.md  io.md  label.md  page_template.md  plugins.md  quickstart_contract.md  rate.md  source_data_contract_v1.md  style-guide.md
docs/api/: index.md  reference.md
docs/app/: export-results.md  get-started.md  run-analysis.md  upload-data.md
docs/concepts/: architecture.md  compatibility_and_versioning.md  framework.md
docs/examples/: end-to-end.md  plugin-patterns.md
docs/for-maintainers/: fuzzing.md  release-and-pypi.md
docs/getting-started/: first-pipeline-config.md  installation.md  quickstart-first-run.md
docs/guides/: author-plugins.md  cli.md  configure-pipeline.md  end_to_end_pipeline.md  explore-data-with-eda.md  index.md  ingest-public-ats.md  llm_operations.md  non-fail-fast-and-recovery.md  output_columns.md  publish-to-neondb.md  recommend-for-agents.md  run-via-cli.md  run-via-python-api.md  troubleshooting.md  understand-output.md
docs/javascripts/: url_redirects.js
docs/maintainers/: docs_stack.md  fuzzing.md  historical_data.md  packaging.md  page_template.md  performance.md  release_process.md  roadmap_agent_first.md
docs/plugins/: author_guide.md  compatibility.md
docs/reference/: agent-api-contracts.md  clean.md  cli.md  eda-rules-schema.md  error-model.md  faq.md  filter.md  ingest-manifest-schema.md  ingest-quality-policy-schema.md  ingest-source-ref-glossary.md  io.md  label.md  llm.md  match.md  neondb-contract.md  objects.md  pipeline-config-schema.md  plugin-manifest-schema.md  plugins.md  rate.md  recommend-eval-schema.md  recommendation-policy-schema.md  reliability-policy-schema.md  runtime-api.md  runtime.md  schema.md  source_data_contract_v1.md  source_schema.md  stage-contracts.md
docs/start/: entry_points.md  installation.md  quickstart.md
docs/stylesheets/: extra.css
docs/troubleshooting/: common-errors.md  faq.md
examples/: README.md  create_sample_dataset.py  example_plugins.py  explore_parquet.py  investigate_canadian_jobs.py  run_parquet.py  run_runtime.py  sample_pipeline.toml  sample_plugins.toml  shortlist_mds_new_grad.py
plugin_template/: README.md  pyproject.toml
plugin_template/src/honestroles_plugin_example/: __init__.py  plugins.py
plugin_template/tests/: test_plugin_contract.py
plugins-index/: plugins.toml
scripts/: check_docs_refs.sh  check_markdown_links.py  check_markdown_style.py  profile_jobs_historical.py  publish_pypi.sh  report_data_quality.py  run_coverage.sh  run_ingest_smoke.sh  run_neondb_smoke.sh  run_precommit_fast.sh  scaffold_plugin.py
src/honestroles/: __init__.py  _deprecation.py  deprecation.py  diagnostics.py  domain.py  errors.py  objects.py  plugins.py  runtime.py  schema.py  stages.py
tests/: conftest.py  test_adapter.py  test_cli.py  test_cli_commands.py  test_cli_operability.py  test_config.py  test_deprecation.py  test_docs_cli_reference.py  test_docs_filter_reference.py  test_docs_nav_consistency.py  test_docs_ux_structure.py  test_errors.py  test_ingest.py  test_ingest_connector_fixtures.py  test_ingest_smoke_live.py  test_ingest_v3.py  test_init_module.py  test_init_surface.py  test_io.py  test_models.py  test_objects.py  test_packaging_distribution.py  test_plugin_api_contract.py  test_plugin_compat_matrix.py  test_plugins.py  test_plugins_index.py  test_publish_neondb.py  test_readme_quickstart_smoke.py  test_recommend.py  test_recommend_cli.py  test_recommend_coverage.py  test_reliability_gate.py  test_report_data_quality_script.py  test_runtime.py  test_scaffold_plugin_script.py  test_scaffold_template_resolution.py  test_schema.py  test_stage_branches.py  test_stages.py
tests/docs/: test_docs_snippets.py
tests/eda/: test_artifacts.py  test_charts.py  test_common.py  test_dashboard_app.py  test_diff.py  test_gate.py  test_profile.py  test_profile_findings.py  test_profile_metrics.py  test_profile_runtime.py  test_report.py  test_rules.py
tests/fixtures/: normalize_golden_input.csv  source_data_edge_cases.csv
tests/fuzz/: __init__.py  invariants.py  strategies.py  test_fuzz_clean_dedup.py  test_fuzz_clean_historical.py  test_fuzz_clean_html.py  test_fuzz_clean_normalize.py  test_fuzz_clean_pipeline.py  test_fuzz_cli.py  test_fuzz_cli_quality_report.py  test_fuzz_cli_scaffold.py  test_fuzz_duckdb_query_validation.py  test_fuzz_filter_chain.py  test_fuzz_filter_jobs.py  test_fuzz_filter_predicates.py  test_fuzz_init_surface.py  test_fuzz_io_contract.py  test_fuzz_io_parquet.py  test_fuzz_io_quality_report.py  test_fuzz_label_heuristic.py  test_fuzz_label_jobs.py  test_fuzz_label_llm.py  test_fuzz_llm_client.py  test_fuzz_llm_prompts.py  test_fuzz_match_application_plan.py  test_fuzz_match_pipeline.py  test_fuzz_match_rank.py  test_fuzz_match_signals.py  test_fuzz_plugins.py  test_fuzz_plugins_entrypoints.py  test_fuzz_plugins_module_loader.py  test_fuzz_plugins_registry.py  test_fuzz_rate_completeness.py  test_fuzz_rate_composite.py  test_fuzz_rate_jobs.py  test_fuzz_rate_quality.py  test_fuzz_runtime_pipeline.py
tests/plugins/: fixture_plugins.py
tests/test_clean/: test_clean_jobs.py  test_dedup.py  test_edge_case_fixtures.py  test_historical.py  test_html.py  test_normalize.py  test_normalize_golden.py
tests/test_filter/: test_chain.py  test_filter_jobs.py  test_predicates.py
tests/test_io/: test_contract.py  test_dataframe.py  test_duckdb_io.py  test_parquet.py  test_quality_report.py
(+122 files in other folders)
