[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "honestroles"
dynamic = ["version"]
description = "Clean, filter, label, and rate job description data with heuristics and local LLMs."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Hypertrial" }]
dependencies = [
  "beautifulsoup4",
  "duckdb",
  "numpy>=1.26,<2.0",
  "pandas>=2.2,<2.3",
  "pyarrow",
  "requests",
]

[project.urls]
Homepage = "https://github.com/hypertrial/honestroles"
Repository = "https://github.com/hypertrial/honestroles"
Issues = "https://github.com/hypertrial/honestroles/issues"
Documentation = "https://github.com/hypertrial/honestroles/tree/main/docs"

[project.optional-dependencies]
dev = [
  "pre-commit",
  "pytest",
  "pytest-xdist",
  "pytest-cov",
  "mypy",
  "ruff",
  "tomli; python_version < '3.11'",
  "types-requests",
]
llm = []

[tool.hatch.build.targets.wheel]
packages = ["src/honestroles"]

[tool.hatch.version]
path = "src/honestroles/__about__.py"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = ["-n", "auto", "-m", "not performance"]
markers = [
  "performance: runtime guardrail checks for hot paths",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mypy]
python_version = "3.10"
files = ["src/honestroles"]
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
