[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "honestroles"
dynamic = ["version"]
description = "Clean, filter, label, and rate job description data with heuristics and local LLMs."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Hypertrial" }]
keywords = [
  "jobs",
  "job-postings",
  "data-cleaning",
  "data-quality",
  "ranking",
  "llm",
  "pandas",
  "plugin",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = [
  "beautifulsoup4",
  "duckdb",
  "numpy>=1.26,<2.0",
  "pandas>=2.2,<2.3",
  "pyarrow",
  "requests",
]

[project.urls]
Homepage = "https://github.com/hypertrial/honestroles"
Repository = "https://github.com/hypertrial/honestroles"
Issues = "https://github.com/hypertrial/honestroles/issues"
Documentation = "https://hypertrial.github.io/honestroles/"
Changelog = "https://github.com/hypertrial/honestroles/blob/main/CHANGELOG.md"

[project.scripts]
honestroles-scaffold-plugin = "honestroles.cli.scaffold_plugin:main"
honestroles-report-quality = "honestroles.cli.report_data_quality:main"

[project.optional-dependencies]
dev = [
  "build",
  "hatchling",
  "pre-commit",
  "pytest",
  "pytest-xdist",
  "pytest-cov",
  "mypy",
  "ruff",
  "tomli; python_version < '3.11'",
  "twine",
  "types-requests",
]
llm = []
docs = [
  "mkdocs",
  "mkdocs-material",
  "mkdocstrings[python]",
  "pymdown-extensions",
]

[tool.hatch.build.targets.wheel]
packages = ["src/honestroles"]

[tool.hatch.build.targets.wheel.force-include]
plugin_template = "honestroles/_templates/plugin_template"
"src/honestroles/py.typed" = "honestroles/py.typed"

[tool.hatch.version]
path = "src/honestroles/__about__.py"

[tool.pytest.ini_options]
pythonpath = ["src", "plugin_template/src"]
testpaths = ["tests", "plugin_template/tests"]
addopts = ["-n", "auto", "-m", "not performance"]
markers = [
  "performance: runtime guardrail checks for hot paths",
  "historical_smoke: opt-in smoke checks that require local historical datasets",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mypy]
python_version = "3.10"
files = ["src/honestroles"]
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
