[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "honestroles"
dynamic = ["version"]
description = "Deterministic, config-driven job-data runtime with Polars and explicit plugin registries."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Hypertrial" }]
keywords = [
  "jobs",
  "data-engineering",
  "polars",
  "plugin",
  "runtime",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]
dependencies = [
  "polars>=1.30,<2.0",
  "pydantic>=2.10,<3.0",
  "typing-extensions>=4.9",
  "tomli; python_version < '3.11'",
]

[project.urls]
Homepage = "https://honestroles.com"
Repository = "https://github.com/hypertrial/honestroles"
Issues = "https://github.com/hypertrial/honestroles/issues"
Documentation = "https://honestroles.com/docs/"

[project.scripts]
honestroles = "honestroles.cli.main:main"

[project.optional-dependencies]
dev = [
  "build",
  "hatchling",
  "hypothesis",
  "mypy",
  "pre-commit",
  "pytest",
  "pytest-cov",
  "pytest-xdist",
  "ruff",
  "twine",
]
docs = [
  "mkdocs",
  "mkdocs-material",
]

[tool.hatch.build.targets.wheel]
packages = ["src/honestroles"]

[tool.hatch.build.targets.wheel.force-include]
"plugin_template" = "honestroles/_templates/plugin_template"
"src/honestroles/py.typed" = "honestroles/py.typed"

[tool.hatch.version]
path = "src/honestroles/__about__.py"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = ["-m", "not fuzz"]
markers = [
  "fuzz: property/fuzz tests for malformed and adversarial inputs",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mypy]
python_version = "3.10"
files = ["src/honestroles"]
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
