[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "honestroles-plugin-example"
version = "0.1.0"
description = "Example plugin package for honestroles runtime ABI"
requires-python = ">=3.10"
dependencies = ["honestroles", "polars"]

[tool.pytest.ini_options]
testpaths = ["tests"]
